
<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:context="com.example.websitetrivia.presentation.ui.fragments.WebsiteDetailFragment">
    <LinearLayout
        android:id="@+id/website_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margintop"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/website_detail_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margintop"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/website_detail_et_founding_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/founding_year_hint"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margintop"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/website_detail_et_founders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/founders_hint"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margintop"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/website_detail_et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margintop"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/website_detail_et_CEO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CEO_hint"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margintop"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/website_detail_et_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rank_hint"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margintop"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/website_detail_et_time_spent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_spent_hint"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_save_text"
            android:id="@+id/website_detail_btn_save"
            />
    </LinearLayout>


</ScrollView>

